--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #Firebase-- 
+  cloud_firestore: 3.1.7
+  firebase_core: 1.12.0
+  firebase_auth: 3.3.6
+  google_sign_in: 5.2.3
+  #file picker-- 
+  file_picker: 4.3.3
+  firebase_storage: 10.2.6
+  cached_network_image: 3.2.0
+  flutter_image_compress: 1.1.0
+  shared_preferences: 2.0.12
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  cloud_firestore: 3.1.7
-  firebase_core: 1.12.0
+  
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -61,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
